--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
     </div>
 
 
-
-    <div class="row center-block ">
+<div class="container">
+  <div class="row justifycenter">
       <div class="creation col-md-4 ">
         <div class="crea">
           <img class="img-thumbnail" src="assets/img/Creche.png" alt="Creche">
@@ -256,7 +256,9 @@
 
 
     </div>
-
+  </div>
+</div>
+    
   </section>
 
   <section id="CV-section" class="section ">
